--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "p-queue": "^7.1.0"
   },
   "devDependencies": {
-    "@types/node": "^15.0.2"
+    "@types/node": "^15.0.2",
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
