сделал локальную базу данных заминусованного, чтобы повторно не пытатся минусовать комментарии к которым запрещено голосование (по данным из api это известно только для постов)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,7 @@
     "no-multiple-empty-lines": "off",
     "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
     "no-use-before-define": "off",
-    "padded-blocks": "off"
+    "padded-blocks": "off",
+    "prefer-const": "warn"
   }
 }
