replace "console.log" to ora spinner

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,17 @@
     "commonjs": true,
     "es2021": true
   },
-  "extends": [
-    "airbnb-base"
-  ],
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
   },
+  "plugins": [
+    "promise"
+  ],
+  "extends": [
+    "airbnb-base",
+    "plugin:promise/recommended"
+  ],
   "settings": {
     "import/resolver": {
       "node": {
