--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint src/"
   },
   "dependencies": {
+    "blessed": "^0.1.81",
+    "blessed-contrib": "^4.8.21",
     "dotenv": "^10.0.0",
     "got": "^11.8.2",
     "leveldown": "^6.0.0",
